[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draft-publish"
version = "0.2.0"
description = "CLI for Draft - publish paid articles from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "httpx>=0.24",
    "rich>=13.0",
    "python-frontmatter>=1.0",
    "cryptography>=41.0",
]

[project.scripts]
draft = "draft_cli.main:app"

[project.urls]
Homepage = "https://draft-publish.com"
Repository = "https://github.com/s-saga011/draft-publish"
